// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reward.v2.controller GET /v2/reward/schedules with active param true returns active schedules for default chain and all vaults 1`] = `
Object {
  "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28": Array [
    Object {
      "amount": 2035.82,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1619715600,
      "start": 1619110800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 0.094819176,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1617901200,
      "start": 1617296400,
      "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
    },
    Object {
      "amount": 1865.215,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 50,
      "end": 1620320400,
      "start": 1619715600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
  ],
}
`;

exports[`reward.v2.controller GET /v2/reward/schedules with an invalid specified chain returns a 400 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`reward.v2.controller GET /v2/reward/schedules with no specified chain returns schedules for default chain and all vaults 1`] = `
Object {
  "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28": Array [
    Object {
      "amount": 2035.82,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1619715600,
      "start": 1619110800,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
    Object {
      "amount": 0.094819176,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1617901200,
      "start": 1617296400,
      "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
    },
    Object {
      "amount": 1865.215,
      "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
      "compPercent": 100,
      "end": 1620320400,
      "start": 1619715600,
      "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    },
  ],
}
`;

exports[`reward.v2.controller GET /v2/reward/schedules/<beneficiary> with active param true returns schedules for default chain and one vault 1`] = `
Array [
  Object {
    "amount": 2035.82,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1619715600,
    "start": 1619110800,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 0.094819176,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1617901200,
    "start": 1617296400,
    "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
  },
  Object {
    "amount": 1865.215,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 50,
    "end": 1620320400,
    "start": 1619715600,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
]
`;

exports[`reward.v2.controller GET /v2/reward/schedules/<beneficiary> with an invalid specified chain returns a 400 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`reward.v2.controller GET /v2/reward/schedules/<beneficiary> with invalid param specified returns a 400, NotFound 1`] = `
Object {
  "errors": Array [],
  "message": "Vault unknowsvaultdata doest have any data",
  "name": "Error",
  "status": 404,
}
`;

exports[`reward.v2.controller GET /v2/reward/schedules/<beneficiary> with no specified chain returns schedule for default chain and one vault 1`] = `
Array [
  Object {
    "amount": 2035.82,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1619715600,
    "start": 1619110800,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
  Object {
    "amount": 0.094819176,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1617901200,
    "start": 1617296400,
    "token": "0x798D1bE841a82a273720CE31c822C61a67a601C3",
  },
  Object {
    "amount": 1865.215,
    "beneficiary": "0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28",
    "compPercent": 100,
    "end": 1620320400,
    "start": 1619715600,
    "token": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
  },
]
`;

exports[`reward.v2.controller GET /v2/reward/tree/:address request user with saved claims returns requested address claim 1`] = `
Object {
  "cumulativeAmounts": Array [
    "4",
    "1",
  ],
  "cycle": "0x01",
  "index": "0x01",
  "node": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
  "proof": Array [
    "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
  ],
  "tokens": Array [
    "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "0x798d1be841a82a273720ce31c822c61a67a601c3",
  ],
  "user": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
}
`;
